meet the team updates

--- a/team.html
+++ b/team.html
@@ -67,12 +67,9 @@
           <div class="col-md-2 col-sm-5 text-left member">
             <img src="teamPhotos/jessica.jpg" class="img-fluid mx-auto d-block memberIMG" alt="Responsive image">
             <h4>Jessica Chen <br> CC ‘23</h4>
-            <p>Sitting idly in home quarantine in Bangalore, India, Rishi saw Columbia Int Fic as the perfect opportunity to create at the intersection of art and technology. <a data-toggle="collapse" href="#member3" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
-            <div class="collapse" id="member3">
-              <p>As a member of the tech team, he helped build the project website and interactive elements for <i>Sinéad and Louisa </i>and <i>I See You</i>. At Columbia, he studies philosophy, directs theater and short films, dances with CU Raas, and eats a LOT of chicken. Check out his <a href="https://rishichhapolia.wixsite.com/rishic">website</a> and creative portfolio <a href="https://www.instagram.com/rchpol/">Instagram!</a></p>
-            </div>
+            <p>A sophomore studying CS and Visual Arts at Columbia College.</p>
             <a href="#"><img src="images/membermail.svg" style="width:30px" class="icon1"></a>
-            <a href="https://www.linkedin.com/in/rishichhapolia/"><img src="images/memberlinkedin.svg" style="width:30px" class="icon2"></a>
+            <a href="https://www.linkedin.com/in/jessica-chen-3bb3596a/"><img src="images/memberlinkedin.svg" style="width:30px" class="icon2"></a>
           </div>
           <!-- Victoria Geh-->
           <div class="col-md-2 col-sm-5 text-left member">
@@ -91,9 +88,9 @@
           <div class="col-md-2 col-sm-5 text-left member">
             <img src="teamPhotos/brian.jpg" class="img-fluid mx-auto d-block memberIMG" alt="Responsive image">
             <h4>Brian Laurito <br> GS ‘22</h4>
-            <p>Payton is a junior at Columbia College, majoring in Creative Writing and Religion on the pre-law track. <a data-toggle="collapse" href="#member5" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
+            <p>As a junior in the Dual BA Program between Columbia University and Trinity College Dublin, Brian is majoring in English. <a data-toggle="collapse" href="#member5" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
             <div class="collapse" id="member5">
-              <p>As a born and raised New Yorker, and the daughter of two surgeons, Payton has witnessed the effects of the COVID-19 on her local community. She joined the Columbia Int Fic team in order to best tell the stories of those the pandemic threatens to silence. In addition to being a part of the Columbia Int-Fic, Payton is the Undersecretary General for CMUNNY XV, a member of CIRCA’s travel Model UN team, a tour guide for the URC, a member of the Women in Law and Politics, as well as a contributor for The Federalist.</p>
+              <p>He is currently working with the Social Media team to promote Int Fic's next round of stories and is looking forward to creating visuals in the future!</p>
             </div>
             <a href="#"><img src="images/membermail.svg" style="width:30px" class="icon1"></a>
             <a href="#"><img src="images/memberlinkedin.svg" style="width:30px" class="icon2"></a>
@@ -118,7 +115,7 @@
               <p>She is a peer advocate for Sexual Violence Response, an organization that supports Columbia University-affiliated survivors of sexual and gender-based violence. She is also the Vice-President of Columbia Queer Alliance. In her free time, she likes to read, bake pastries, and watch cat videos on YouTube.</p>
             </div>
             <a href="#"><img src="images/membermail.svg" style="width:30px" class="icon1"></a>
-            <a href="https://www.linkedin.com/in/sally-jee-7732101a2/"><img src="images/memberlinkedin.svg" style="width:30px" class="icon2"></a>
+            <a href="https://www.linkedin.com/in/erin-liang/"><img src="images/memberlinkedin.svg" style="width:30px" class="icon2"></a>
           </div>
           <!-- Jane Loughman -->
           <div class="col-md-2 col-sm-5 text-left member">
@@ -157,18 +154,18 @@
           </div>
           <!-- Donna Qi-->
           <div class="col-md-2 col-sm-5 text-left member">
-            <img src="teamPhotos/ben.jpg" class="img-fluid mx-auto d-block memberIMG" alt="Responsive image">
+            <img src="teamPhotos/donna.png" class="img-fluid mx-auto d-block memberIMG" alt="Responsive image">
             <h4>Donna Qi <br> CC ’24</h4>
-            <p>Benjamine Mo is a sophomore at Columbia University pursuing studies in Ethnicity & Race (Asian American Studies). <a data-toggle="collapse" href="#member11" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
+            <p>Donna Qi is a sophomore at Columbia University majoring in Economics and History. <a data-toggle="collapse" href="#member11" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
             <div class="collapse" id="member11">
-              <p>His interests include creative writing, public health, political advocacy, and social entrepreneurship. He lives in Queens, NYC and has worked closely with Victoria Geh to create <i>A Doubled Front,</i> an exploration of identity which he is grateful to have been able to share with you, and one which he himself is engaged in.</p>
+              <p>As a long time enthusiast of reading and dissecting stories, Donna found Columbia Int Fic to be a fantastic opportunity to push the boundaries of her storytelling instincts and connect with her inner storyteller. Her interests also include listening to podcasts on the subway, talking people’s ears off about movies, and obsessing over Taylor Swift easter eggs.</p>
             </div>
             <a href="#"><img src="images/membermail.svg" style="width:30px" class="icon1"></a>
-            <a href="https://www.linkedin.com/in/benjaminemo/"><img src="images/memberlinkedin.svg" style="width:30px" class="icon2"></a>
+            <a href="https://www.linkedin.com/in/donna-qi-1b84aa1a3/"><img src="images/memberlinkedin.svg" style="width:30px" class="icon2"></a>
           </div>
           <!-- Carly Roth-->
           <div class="col-md-2 col-sm-5 text-justify member">
-            <img src="teamPhotos/giordana.jpg" class="img-fluid mx-auto d-block memberIMG" alt="Responsive image">
+            <img src="teamPhotos/carly.png" class="img-fluid mx-auto d-block memberIMG" alt="Responsive image">
             <h4>Carly Roth <br> CC ‘21</h4>
             <p>A senior studying computer science, math, and English. </p>
             <a href="#"><img src="images/membermail.svg" style="width:30px" class="icon1"></a>
@@ -213,10 +210,7 @@
           <div class="col-md-2 col-sm-5 text-justify member">
             <img src="teamPhotos/tina.jpg" class="img-fluid mx-auto d-block memberIMG" alt="Responsive image">
             <h4>Tina Wang <br> CC ‘23</h4>
-            <p>Giordana Serretta Fiorentino is a rising Sophomore at Columbia College majoring in Anthropology and Creative Writing. <a data-toggle="collapse" href="#member16" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
-            <div class="collapse" id="member16">
-              <p>She is honored to be a writer and editor for this project and share the impact of COVID from the perspective of women in her native country, Italy. She is excited to experiment with interactive fiction and collaborate with the GCC's talented peers. </p>
-            </div>
+            <p>A sophomore majoring in architecture at Columbia College. Illustrator for Columbia Spectators and CIF visual team.</p>
             <a href="#"><img src="images/membermail.svg" style="width:30px" class="icon1"></a>
             <a href="http://linkedin.com/in/tina-wang-233090195"><img src="images/memberlinkedin.svg" style="width:30px" class="icon2"></a>
           </div>
@@ -226,20 +220,20 @@
           <div class="col-md-2 col-sm-5 text-justify member">
             <img src="teamPhotos/vilanna.jpg" class="img-fluid mx-auto d-block memberIMG" alt="Responsive image">
             <h4>Vilanna Wang<br> CC ‘24</h4>
-            <p>Giordana Serretta Fiorentino is a rising Sophomore at Columbia College majoring in Anthropology and Creative Writing. <a data-toggle="collapse" href="#member17" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
+            <p>Vilanna is a freshman who is currently undecided but interested in business/journalism! She has loved being a part of CIF's second series :) <a data-toggle="collapse" href="#member17" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
             <div class="collapse" id="member17">
-              <p>She is honored to be a writer and editor for this project and share the impact of COVID from the perspective of women in her native country, Italy. She is excited to experiment with interactive fiction and collaborate with the GCC's talented peers. </p>
+              <p>As a writer, she uses narrative-style stories to juggle the micro and macro worldviews of a college student in the time of Covid. Through expressions of both subjective and universally-relatable emotions, her stories feature discussions of circumstances surrounding family and friends as well as more meditative thoughts on the pandemic as a whole. </p>
             </div>
             <a href="#"><img src="images/membermail.svg" style="width:30px" class="icon1"></a>
             <a href="#"><img src="images/memberlinkedin.svg" style="width:30px" class="icon2"></a>
           </div>
           <!-- Yingjie Wang-->
           <div class="col-md-2 col-sm-5 text-left member">
-            <img src="teamPhotos/ben.jpg" class="img-fluid mx-auto d-block memberIMG" alt="Responsive image">
-            <h4>Yingjie Wang <br> CC ’23</h4>
-            <p>Benjamine Mo is a sophomore at Columbia University pursuing studies in Ethnicity & Race (Asian American Studies). <a data-toggle="collapse" href="#member18" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
+            <img src="teamPhotos/yingjie.png" class="img-fluid mx-auto d-block memberIMG" alt="Responsive image">
+            <h4>Yingjie Wang <br> CC ’24</h4>
+            <p>Yingjie is a freshman in SEAS contemplating computer engineering with a generous does of visual arts classes. <a data-toggle="collapse" href="#member18" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
             <div class="collapse" id="member18">
-              <p>His interests include creative writing, public health, political advocacy, and social entrepreneurship. He lives in Queens, NYC and has worked closely with Victoria Geh to create <i>A Doubled Front,</i> an exploration of identity which he is grateful to have been able to share with you, and one which he himself is engaged in.</p>
+              <p>With a passion for animation and human computer interaction, she is fascinated not only by visual graphics but also the technology driving immersive interactive experiences. Yingjie is also an illustrator at Spectator and has maintained her sanity this semester by spending more time than she would like to admit scrolling through pictures of fluffy cats.</p>
             </div>
             <a href="#"><img src="images/membermail.svg" style="width:30px" class="icon1"></a>
             <a href="https://www.linkedin.com/in/benjaminemo/"><img src="images/memberlinkedin.svg" style="width:30px" class="icon2"></a>
