--- a/countdown.html
+++ b/countdown.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    <img src="images/CIFlogo.png" width=25% alt="CIF logo">
+    <img src="images/white-logo.svg" width=50% alt="CIF logo">
     <h1>what IF?</h1>
 
 <div id="clockdiv">
