--- a/team.html
+++ b/team.html
@@ -108,11 +108,11 @@
           </div>
           <!-- Erin Liang -->
           <div class="col-md-2 col-sm-5 text-left member">
-            <img src="teamPhotos/sally.jpg" class="img-fluid mx-auto d-block memberIMG" alt="Responsive image">
+            <img src="teamPhotos/erin.png" class="img-fluid mx-auto d-block memberIMG" alt="Responsive image">
             <h4>Erin Liang <br> SEAS ‘23</h4>
-            <p>Sally Jee, originally from South Korea, is a senior studying Neuroscience & Behavior. <a data-toggle="collapse" href="#member7" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
+            <p>Erin Liang is a sophomore in SEAS majoring in Computer Science and minoring in Anthropology. <a data-toggle="collapse" href="#member7" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
             <div class="collapse" id="member7">
-              <p>She is a peer advocate for Sexual Violence Response, an organization that supports Columbia University-affiliated survivors of sexual and gender-based violence. She is also the Vice-President of Columbia Queer Alliance. In her free time, she likes to read, bake pastries, and watch cat videos on YouTube.</p>
+              <p>She has loved working with Vilanna, Tina, and Carly on their CIF story, despite frying her eyes trying to get Twine macros to work. Outside of CIF, Erin is also involved in CORE and is a SWE at Columbia Build Lab. You can find her slaving away over her Spotify playlists, drawing things she will never finish, and logging unimpressive athletic feats on Strava. </p>
             </div>
             <a href="#"><img src="images/membermail.svg" style="width:30px" class="icon1"></a>
             <a href="https://www.linkedin.com/in/erin-liang/"><img src="images/memberlinkedin.svg" style="width:30px" class="icon2"></a>
