--- a/team.html
+++ b/team.html
@@ -218,7 +218,7 @@
         <div class="row justify-content-center">
           <!-- Vilanna Wang-->
           <div class="col-md-2 col-sm-5 text-justify member">
-            <img src="teamPhotos/vilanna.jpg" class="img-fluid mx-auto d-block memberIMG" alt="Responsive image">
+            <img src="teamPhotos/vilanna.JPG" class="img-fluid mx-auto d-block memberIMG" alt="Responsive image">
             <h4>Vilanna Wang<br> CC ‘24</h4>
             <p>Vilanna is a freshman who is currently undecided but interested in business/journalism! She has loved being a part of CIF's second series :) <a data-toggle="collapse" href="#member17" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
             <div class="collapse" id="member17">
