Revert "Merge branch 'master' into jessica"
This reverts commit c6d77cccd45615ba9f36fc5b19e82d3183ae24f1, reversing
changes made to bbd44ce7494689bc6b013300d1b9c712750aa40f.

--- a/doubledfrontstory.html
+++ b/doubledfrontstory.html
@@ -607,7 +607,7 @@ Almost midnight now, [[but the sky still glows.-&gt;Fin.]]
 	We also urge readers to engage with the story “I See You” featured on our website which provides a glimpse into the professional life of a surgeon during the pandemic.
 
 
-	(align:"=><=")[<a class="end" href="map.html">Fin.</a>]
+	(align:"=><=")[<a class="end" href="credits.html">Fin.</a>]
 </tw-passagedata>
 
 </tw-storydata>
