--- a/i-see-you-1.html
+++ b/i-see-you-1.html
@@ -526,7 +526,7 @@ You now feel better and ready to go back to work. You reach the hospital. Nothin
 
 	var $end = document.getElementById(&#39;end&#39;).addEventListener(&quot;click&quot;, function() {
 			  console.log(&quot;ending things!&quot;);
-			  window.location.href = &quot;map.html&quot;;
+			  window.location.href = &quot;credits.html&quot;;
 		  });
 &lt;/script&gt;]</tw-passagedata></tw-storydata>
 
