--- a/sinead-page-1.html
+++ b/sinead-page-1.html
@@ -167,7 +167,7 @@
                         emailOn(s);
                     }
                     else if (simg=="end") {
-                        window.location.href = "map.html";
+                        window.location.href = "credits.html";
                     }
                     
                 }
