--- a/countdown.html
+++ b/countdown.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>091820</title>
+  <title>122420</title>
   <meta name="description" content="091820">
     <!-- Logo link -->
         <link rel="shortcut icon" href="images/white-logo.svg"/>
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    <img src="images/CIFlogo.png" width=25% alt="CIF logo">
+    <img src="images/white-logo.svg" width=50% alt="CIF logo">
     <h1>what IF?</h1>
 
 <div id="clockdiv">
@@ -89,7 +89,7 @@ function initializeClock(id, endtime) {
 
 //const deadline = new Date(Date.parse(new Date()) + 15 * 24 * 60 * 60 * 1000);
 
-    const deadline = 'September 18 2020 10:00:00 GMT-0400';
+    const deadline = 'December 24 2020 10:00:00 GMT-0400';
     
 initializeClock('clockdiv', deadline);
 </script>
