--- a/countdown.html
+++ b/countdown.html
@@ -25,7 +25,7 @@
 <body>
     <img src="images/white-logo.svg" width=50% alt="CIF logo">
     <h1>what IF?</h1>
-
+<!--
 <div id="clockdiv">
   <div>
     <span class="days"></span>
@@ -44,7 +44,9 @@
     <div class="smalltext">seconds</div>
   </div>
 </div>
-
+-->
+    <h1>Coming Soon</h1>
+   
 
 <script>
 function getTimeRemaining(endtime) {
