--- a/credits-2S1.html
+++ b/credits-2S1.html
@@ -36,21 +36,25 @@
                 <h1>Project Credits</h1>
                 <img src="images/white crown logo.png" height="150px">
                 <div class="creds-rolling">
-                    <h4>Stories</h4>
-                    <p><b>A Letter in Which the Writer Sees Herself</b>: Elisabeth McLaughlin [Writing, Visuals], Jessica Chen [Tech]</p>
-                    <p><b>CoviDiary</b>: Vilanna Wang [Writing], Tina Wang [Visuals], Carly Roth [Visuals], Erin Liang [Tech]</p>
-                    <p><b>Masks Off</b>: Giordana Fiorentino [Writing], Jessica Chen [Visuals], Victoria Geh [Tech]</p>
-                    <p><b>Prohibido Tocar</b>: Ana Valeria [Writing], Celia Le [Visuals], Yingjie Wang [Tech]</p>
-                    <p><b>Trash 2020</b>: Lauren Alcindor [Writing, Tech], Yingjie Wang [Visuals]</p>
-                    <p><b>4</b>: Donna Qi [Writing], Christina Su [Visuals], Lauren Alcindor [Tech]</p>
+                    <h4>Writing</h4>
+                    <p><b>A Doubled Front</b>: Benjamine Mo, Victoria Geh</p>
+                    <p><b>From Bystander to Activist</b>: Sally Jee, Lauren Alcindor</p>
+                    <p><b>I See You</b>: Payton Geller, Arina Karkhanis</p>
+                    <p><b>Sinéad & Louisa</b>: Jane Loughman, Elisabeth McLaughlin</p>
+                    <br />
+                    <h4>Tech</h4>
+                    <p>Lauren Alcindor, Rishi Chhapolia, Victoria Geh</p>
+                    <br />
+                    <h4>Visuals</h4>
+                    <p>Celia Lê, Katherine Bibilouri, Elisabeth McLaughlin, Benjamine Mo</p>
                     <br />
                     <h4>Social Media</h4>
-                    <p>Victoria Geh, Brian Laurito, Jane Loughman, Vilanna Wang</p>
-                    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+                    <p>Victoria Geh, Jane Loughman, Ana Valeria, Arina Karkhanis</p>
+                    <br />
                 </div>
             </div>
         </div>
-        <div class="row justify-content-end fixed-bottom">
+        <div class="row justify-content-end">
             <div class="col-2 text-center">
                 <a href="index.html"><span>back to home</span></a>
             </div>
