--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <div class="navbar-nav">
       <a class="nav-link" href="about.html">about </a>
       <a class="nav-link" href="team.html">meet the team<span class="sr-only">(current)</span></a>
-      <a class="nav-link active current" href="submit.html">submit a story<span class="sr-only">(current)</span></a>
+      <a class="nav-link" href="submit.html">submit a story<span class="sr-only">(current)</span></a>
   </div>
   </div>
 </nav>
