--- a/series_2/covidiary.html
+++ b/series_2/covidiary.html
@@ -947,7 +947,7 @@ I&#39;m not sad about having to leave Memphis behind when I head to college. May
 
 &lt;span class=&quot;center&quot;&gt;&lt;span class=&quot;bigger&quot;&gt;
 ⇡  Click to continue  ⇡
-&lt;/span&gt;&lt;/span&gt;</tw-passagedata><tw-passagedata pid="32" name="poster" tags="final" position="3373,400" size="100,100">&lt;&lt;audio &quot;heytheredelilah&quot; play&gt;&gt;
+&lt;/span&gt;&lt;/span&gt;</tw-passagedata><tw-passagedata pid="32" name="poster" tags="final" position="3372,400" size="100,100">&lt;&lt;audio &quot;heytheredelilah&quot; play&gt;&gt;
 &lt;div class=&quot;normalpic&quot;&gt;
 &lt;img src=&quot;https://raw.githubusercontent.com/vil-anna/vil-anna.github.io/main/images/poster.png&quot; width=&quot;1152.4px&quot; height=&quot;389.2px&quot;&gt; &lt;/div&gt;&lt;div class=center3&gt;&lt;span class=&quot;bigger&quot;&gt;&lt;span class=&quot;white&quot;&gt;&lt;span class=&quot;largetext&quot;&gt;&lt;&lt;timed 1s&gt;&gt;. &lt;&lt;/timed&gt;&gt;&lt;&lt;timed 3s&gt;&gt;. &lt;&lt;/timed&gt;&gt;&lt;&lt;timed 5s&gt;&gt;. &lt;&lt;/timed&gt;&gt;&lt;&lt;timed 7s&gt;&gt;. &lt;&lt;/timed&gt;&gt;&lt;&lt;timed 9s&gt;&gt;. &lt;&lt;/timed&gt;&gt;&lt;/span&gt;
 &lt;&lt;timed 11s&gt;&gt; What //is// it like in New York City? &lt;&lt;/timed&gt;&gt;
@@ -965,7 +965,7 @@ I&#39;m not sad about having to leave Memphis behind when I head to college. May
 &lt;/span&gt;&lt;/span&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="33" name="StoryInit" tags="" position="3375,275" size="100,100">&lt;&lt;cacheaudio &quot;heytheredelilah&quot; &quot;https://raw.githubusercontent.com/vil-anna/vil-anna.github.io/main/music/heytheredelilah.mp3&quot;&gt;&gt;
 
 &lt;&lt;cacheaudio &quot;campus&quot; &quot;https://raw.githubusercontent.com/vil-anna/vil-anna.github.io/main/music/campus.mp3&quot;&gt;&gt;
-</tw-passagedata><tw-passagedata pid="34" name="Start" tags="gradient" position="100,252" size="100,100">&lt;div class=&quot;center3&quot;&gt;
+</tw-passagedata><tw-passagedata pid="34" name="Start" tags="gradient" position="100,251" size="100,100">&lt;div class=&quot;center3&quot;&gt;
 &lt;img src=&quot;https://raw.githubusercontent.com/vil-anna/vil-anna.github.io/main/images/tina-May-NewYork-is-Going-Down.PNG&quot; width=100% height=100%&gt;
 
 &lt;div class=&quot;largetext&quot;&gt; CoviDiary &lt;/div&gt;
@@ -986,7 +986,7 @@ Please ensure that you are logged into your Spotify account on your Mac/PC. For 
 
 &lt;/div&gt;
 
-</tw-passagedata><tw-passagedata pid="35" name="credits" tags="gradient-credits" position="3334,585" size="100,100">&lt;div class=&quot;center3&quot;&gt;
+</tw-passagedata><tw-passagedata pid="35" name="credits" tags="gradient" position="3333,585" size="100,100">&lt;div class=&quot;center3&quot;&gt;
 &lt;img src=&quot;https://raw.githubusercontent.com/vil-anna/vil-anna.github.io/main/images/carly-reading-iliad.png&quot; width=60% height=60%&gt;
 
 &lt;div class=&quot;bigger2&quot;&gt;__Credits:__&lt;/div&gt;
