donna story final update

--- a/series_2/4/Donna Story.html
+++ b/series_2/4/Donna Story.html
@@ -24,6 +24,11 @@ body, tw-story {
   font-size: 1.1em;
 }
 
+/* sent test right align */
+div.right {
+  text-align: right;
+  }
+
 h1 {
   color: #141115;
 }
@@ -204,7 +209,9 @@ img.finalpic {
 .sticky + .content {
   padding-top: 102px;
 }
+
 </style><script role="script" id="twine-user-script" type="text/twine-javascript">
+
 
 
 
@@ -323,16 +330,16 @@ There are still a few things that need to be figured out:
 GUYS]&lt;c1|
 (click: ?c1)[MY COMPANY SAID WE CAN WORK FROM HOME NOW]&lt;c2|
 (click: ?c2)[🤗🤗🤗]&lt;c3|
-(click: ?c3)[should I just come back to vancouver…
+(click: ?c3)[&#39;&#39;cece&#39;&#39;: should I just come back to vancouver…
 with your job going remote it means my lab job probably can’t continue right????]&lt;c4|
 (click: ?c4)[things are getting pretty serious]&lt;c5|
 
 (click: ?c5)[&#39;&#39;momma&#39;&#39;: 
 just come back]&lt;c6|
 
-(click: ?c6)[&#39;&#39;rebecca&#39;&#39;: 
+&lt;div class= &quot;right&quot;&gt;(click: ?c6)[&#39;&#39;rebecca&#39;&#39;: 
 wait BEFORE YOU COME BACK
-you need to go pack my stuff…. 😬]&lt;c7|
+you need to go pack my stuff…. 😬]&lt;c7|&lt;/div&gt;
 
 (click: ?c7)[&#39;&#39;cece&#39;&#39;: 
 😑]&lt;c8|
@@ -417,16 +424,16 @@ Location: Dining table of the Chen Family Residence
 &lt;center&gt;March 25th, 2020
 Location: Boston&lt;/center&gt;
  
-[&#39;&#39;Rebecca&#39;&#39;: Okay, so the movers are gonna come help you at 3. Do you need any more help?]&lt;c3|
-(click: ?c3)[&#39;&#39;Cece&#39;&#39;: No, but you have so much shit that I’m going to need to pull an all nighter in order to finish packing everything.]&lt;c4|
-(click: ?c4)[&#39;&#39;Rebecca&#39;&#39;: Just throw everything that’s perishable and that you thin doesn’t need to be packed away, okay?]&lt;c5|
-(click: ?c5)[&#39;&#39;Cece&#39;&#39;: Yes, I have already thrown many things away.]&lt;c6|
-(click: ?c6)[&#39;&#39;Rebecca&#39;&#39;: What? Like what?]&lt;c7|
-(click: ?c7)[&#39;&#39;Cece&#39;&#39;: like your beloved shoes that look like you walked through a dumpster in ]&lt;c8|
-(click: ?c8)[&#39;&#39;Rebecca&#39;&#39;: WAIT can you please keep-]&lt;c9|
+[&#39;&#39;rebecca&#39;&#39;: Okay, so the movers are gonna come help you at 3. Do you need any more help?]&lt;c3|
+&lt;div class= &quot;right&quot;&gt;(click: ?c3)[&#39;&#39;cece&#39;&#39;: No, but you have so much shit that I’m going to need to pull an all nighter in order to finish packing everything.]&lt;c4|&lt;/div&gt;
+(click: ?c4)[&#39;&#39;rebecca&#39;&#39;: Just throw everything that’s perishable and that you thin doesn’t need to be packed away, okay?]&lt;c5|
+&lt;div class= &quot;right&quot;&gt;(click: ?c5)[&#39;&#39;cece&#39;&#39;: Yes, I have already thrown many things away.]&lt;c6|&lt;/div&gt;
+(click: ?c6)[&#39;&#39;rebecca&#39;&#39;: What? Like what?]&lt;c7|
+&lt;div class= &quot;right&quot;&gt;(click: ?c7)[&#39;&#39;cece&#39;&#39;: like your beloved shoes that look like you walked through a dumpster in ]&lt;c8|&lt;/div&gt;
+(click: ?c8)[&#39;&#39;rebecca&#39;&#39;: WAIT can you please keep-]&lt;c9|
  
 (click: ?c9)[[[Continue-&gt;Alex Chen]]]
-</tw-passagedata><tw-passagedata pid="14" name="Alex Chen" tags="" position="948,369" size="100,100">&lt;style&gt;
+</tw-passagedata><tw-passagedata pid="14" name="Alex Chen" tags="" position="949,369" size="100,100">&lt;style&gt;
 .top-container {
   background-color: #f1f1f1;
   padding: 30px;
@@ -457,23 +464,22 @@ Location: Boston&lt;/center&gt;
   &lt;center&gt;&lt;pre&gt;&lt;h2&gt;&amp;#8249;               Alex Chen               &amp;#128100;&lt;/h2&gt;&lt;/pre&gt;&lt;/center&gt;
 &lt;/div&gt;
 
-&lt;center&gt;March 30th, 2020
-Location: Toronto&lt;/center&gt;
+&lt;center&gt;March 30th, 2020&lt;/center&gt;
 
-[&#39;&#39;Derek&#39;&#39;: did you finish math?]&lt;c1|
-(click: ?c1)[&#39;&#39;Alex&#39;&#39;: yeah i did. We can game later]&lt;c2|
-(click: ?c2)[&#39;&#39;Derek&#39;&#39;: sounds good]&lt;c3|
-(click: ?c3)[&#39;&#39;Alex&#39;&#39;: also all my sisters are back…]&lt;c4|
-(click: ?c4)[&#39;&#39;Derek&#39;&#39;: ?? where did they come back from]&lt;c5|
-(click: ?c5)[&#39;&#39;Alex&#39;&#39;: new york and boston]&lt;c6|
-(click: ?c6)[&#39;&#39;Derek&#39;&#39;: aren’t things pretty bad there?]&lt;c7|
-(click: ?c7)[&#39;&#39;Alex&#39;&#39;: yeah, one of them came back later and is now quarantined]&lt;c8|
-(click: ?c8)[&#39;&#39;Derek&#39;&#39;: shit… how long have you even been in Canada for?]&lt;c9|
-(click: ?c9)[&#39;&#39;Alex&#39;&#39;: bro. I’ve been back since Chinese New Year since it got so bad in China]&lt;c10|
-(click: ?c10)[&#39;&#39;Derek&#39;&#39;: LMAO that’s kind of hilarious]&lt;c11|
-(click: ?c11)[&#39;&#39;Derek&#39;&#39;: are you planning on coming back to China to go to school anytime soon?]&lt;c12|
-(click: ?c12)[&#39;&#39;Alex&#39;&#39;: probably not]&lt;c13|
-(click: ?c13)[&#39;&#39;Alex&#39;&#39;: UGH I just wanna go back (text-style: &quot;underline&quot;)[[home]]]</tw-passagedata><tw-passagedata pid="15" name="home" tags="" position="1117,375" size="100,100">April 1st, 2020
+&lt;div class= &quot;right&quot;&gt;[&#39;&#39;derek&#39;&#39;: did you finish math?]&lt;c1|&lt;/div&gt;
+(click: ?c1)[&#39;&#39;alex&#39;&#39;: yeah i did. We can game later]&lt;c2|
+&lt;div class= &quot;right&quot;&gt;(click: ?c2)[&#39;&#39;derek&#39;&#39;: sounds good]&lt;c3|&lt;/div&gt;
+(click: ?c3)[&#39;&#39;alex&#39;&#39;: also all my sisters are back…]&lt;c4|
+&lt;div class= &quot;right&quot;&gt;(click: ?c4)[&#39;&#39;derek&#39;&#39;: ?? where did they come back from]&lt;c5|&lt;/div&gt;
+(click: ?c5)[&#39;&#39;alex&#39;&#39;: new york and boston]&lt;c6|
+&lt;div class= &quot;right&quot;&gt;(click: ?c6)[&#39;&#39;derek&#39;&#39;: aren’t things pretty bad there?]&lt;c7|&lt;/div&gt;
+(click: ?c7)[&#39;&#39;alex&#39;&#39;: yeah, one of them came back later and is now quarantined]&lt;c8|
+&lt;div class= &quot;right&quot;&gt;(click: ?c8)[&#39;&#39;derek&#39;&#39;: shit… how long have you even been in Canada for?]&lt;c9|&lt;/div&gt;
+(click: ?c9)[&#39;&#39;alex&#39;&#39;: bro. I’ve been back since Chinese New Year since it got so bad in China]&lt;c10|
+&lt;div class= &quot;right&quot;&gt;(click: ?c10)[&#39;&#39;derek&#39;&#39;: LMAO that’s kind of hilarious]&lt;c11|
+(click: ?c11)[&#39;&#39;derek&#39;&#39;: are you planning on coming back to China to go to school anytime soon?]&lt;c12|&lt;/div&gt;
+(click: ?c12)[&#39;&#39;alex&#39;&#39;: probably not]&lt;c13|
+(click: ?c13)[&#39;&#39;alex&#39;&#39;: UGH I just wanna go back (text-style: &quot;underline&quot;)[[home]]]</tw-passagedata><tw-passagedata pid="15" name="home" tags="" position="1116,375" size="100,100">April 1st, 2020
  
 [[&lt;img src=&quot;images/Comic1.gif&quot; alt=&quot;Dumpling Making&quot;&gt;-&gt;narration]]</tw-passagedata><tw-passagedata pid="16" name="narration" tags="" position="1290,368" size="100,100">(alert:&quot;Go to May 2nd?&quot;)And so the days pass in the Chen household. In the blink of an eye, April turns to May. Rebecca continues forging ahead in her online classes, rapidly losing motivation and missing classes at an incredible rate. Even though her statistics class starts at 1PM, you see her at 12:55 shoveling porridge and youtiao down her throat because she woke up just ten minutes prior.
 
@@ -506,11 +512,15 @@ At this point, Cece feels like she has to interject. “Don’t say things like 
  
 Even though the door was slammed, Rebecca could still hear them gossiping about her. 
  
-[[&lt;img src=&quot;images/AfterFight.gif&quot; alt=&quot;After Fight&quot;&gt;-&gt;apocalypse]].</tw-passagedata><tw-passagedata pid="19" name="apocalypse" tags="" position="1752,380" size="100,100">May 11th, 2020
+[[&lt;img src=&quot;images/AfterFight.gif&quot; alt=&quot;After Fight&quot;&gt;-&gt;apocalypse]].</tw-passagedata><tw-passagedata pid="19" name="apocalypse" tags="" position="1752,380" size="100,100">&lt;style&gt;
+img {
+	width: 125%;
+}
+&lt;/style&gt;
+May 11th, 2020
  
-&lt;center&gt;&lt;img src=&quot;images/MissedGraphic.png&quot; alt=&quot;Comic: A chilly morning. Nobody speaking at the dinner table.&quot;&gt;&lt;/center&gt;
-
-[[Continue -&gt;May 12]]</tw-passagedata><tw-passagedata pid="20" name="May 12" tags="" position="1890,377" size="100,100">May 12th, 2020
+&lt;center&gt;[[&lt;img src=&quot;images/MissedGraphic.png&quot; alt=&quot;Comic: A chilly morning. Nobody speaking at the dinner table.&quot;&gt;-&gt;May 12]]
+&lt;/center&gt;</tw-passagedata><tw-passagedata pid="20" name="May 12" tags="" position="1890,377" size="100,100">May 12th, 2020
  
 “Hey, are you okay?” Alex inquires with a worried look on his face. Even though Rebecca seemed to be in a perpetual state of stress and pettiness brought about by school and the cold war currently brewing in the house, she still grinned at her little brother’s concern. “Awww, is Alex worried over his older sister?” 
  
@@ -540,7 +550,7 @@ p.outset {border-style: outset;}
 [[&lt;h2&gt;Vancouver&lt;/h2&gt;-&gt;text chat 1]]
 &lt;h4&gt;WeChat&lt;/h4&gt;
 &lt;/p&gt;
-&lt;/center&gt;</tw-passagedata><tw-passagedata pid="26" name="text chat 1" tags="" position="78,349" size="100,100">&lt;style&gt;
+&lt;/center&gt;</tw-passagedata><tw-passagedata pid="26" name="text chat 1" tags="" position="76,349" size="100,100">&lt;style&gt;
 .top-container {
   background-color: #f1f1f1;
   padding: 30px;
@@ -572,10 +582,10 @@ p.outset {border-style: outset;}
 
 [&#39;&#39;momma&#39;&#39;: have you booked your tickets?]&lt;c1|
 (click: ?c1)[&#39;&#39;peggy&#39;&#39;: make sure you bring the masks cece bought you home]&lt;c2|
-(click: ?c2)[&#39;&#39;rebecca&#39;&#39;: yes]&lt;c3|
-(click: ?c3)[&#39;&#39;rebecca&#39;&#39;: i will]&lt;c4|
+&lt;div class= &quot;right&quot;&gt;(click: ?c2)[&#39;&#39;rebecca&#39;&#39;: yes]&lt;c3|
+(click: ?c3)[&#39;&#39;rebecca&#39;&#39;: i will]&lt;c4|&lt;/div&gt;
 (click: ?c4)[&#39;&#39;cece&#39;&#39;: I can’t believe you were still going to go to london -.-]&lt;c5|
-(click: ?c5)[&#39;&#39;rebecca&#39;&#39;: in MY defense when I booked the tickets I didn’t know what would happen]&lt;c6|
+&lt;div class= &quot;right&quot;&gt;(click: ?c5)[&#39;&#39;rebecca&#39;&#39;: in MY defense when I booked the tickets I didn’t know what would happen]&lt;c6|&lt;/div&gt;
 
 (click: ?c6)[Refresh WeChat? 
 [[Yes -&gt;Alt texts]] [[No -&gt;entry 2]]]</tw-passagedata><tw-passagedata pid="27" name="the end" tags="" position="2588,388" size="100,100">(alert:&quot;Are you ready for the end?&quot;)&lt;img src=&quot;images/Final_Dumpling_Making.png&quot; class=&quot;finalpic&quot; alt=&quot;Dumpling Making&quot;&gt;
