donna story credits link

--- a/series_2/4/Donna Story.html
+++ b/series_2/4/Donna Story.html
@@ -210,7 +210,9 @@ img.finalpic {
   padding-top: 102px;
 }
 
+
 </style><script role="script" id="twine-user-script" type="text/twine-javascript">
+
 
 
 
@@ -588,9 +590,9 @@ p.outset {border-style: outset;}
 &lt;div class= &quot;right&quot;&gt;(click: ?c5)[&#39;&#39;rebecca&#39;&#39;: in MY defense when I booked the tickets I didn’t know what would happen]&lt;c6|&lt;/div&gt;
 
 (click: ?c6)[Refresh WeChat? 
-[[Yes -&gt;Alt texts]] [[No -&gt;entry 2]]]</tw-passagedata><tw-passagedata pid="27" name="the end" tags="" position="2588,388" size="100,100">(alert:&quot;Are you ready for the end?&quot;)&lt;img src=&quot;images/Final_Dumpling_Making.png&quot; class=&quot;finalpic&quot; alt=&quot;Dumpling Making&quot;&gt;
+[[Yes -&gt;Alt texts]] [[No -&gt;entry 2]]]</tw-passagedata><tw-passagedata pid="27" name="the end" tags="" position="2588,387" size="100,100">(alert:&quot;Are you ready for the end?&quot;)&lt;img src=&quot;images/Final_Dumpling_Making.png&quot; class=&quot;finalpic&quot; alt=&quot;Dumpling Making&quot;&gt;
 &lt;center&gt;
-(t8n: &quot;dissolve&quot;)+(t8n-time: 10s)[&lt;a href=&quot;credits-2.html&quot;&gt;Credits&lt;/a&gt;]
+(t8n: &quot;dissolve&quot;)+(t8n-time: 10s)[&lt;a href=&quot;https://columbiaintfic.com/credits-2.html&quot;&gt;Credits&lt;/a&gt;]
 &lt;/center&gt;</tw-passagedata><tw-passagedata pid="28" name="Untitled Passage" tags="" position="271,104" size="100,100">
 &lt;style&gt;
 p.dotted {border-style: dotted;}
